--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
+html{
+  min-height: 100%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
+  background: url(/img/bg.jpg) no-repeat;
+  background-size: 100%;
+  background-color:white;
+  min-height: 100%;
+}
+
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+form button,form h5{
+  margin: 20px 0;
 }
 
 code {
